@@ -4,21 +4,30 @@ import  wx
 import ColorPanel
 import images
 
-colourList = [ "Aquamarine", "Black", "Blue", "Blue Violet", "Brown", "Cadet Blue",
-               "Coral", "Cornflower Blue", "Cyan", "Dark Grey", "Dark Green",
-               "Dark Olive Green",
+colourList = [ "Aquamarine", "Grey", "Blue", "Blue Violet", "Brown", "Cadet Blue",
+               "Coral", "Wheat", "Cyan", "Dark Grey", "Dark Green",
+               "Steel Blue",
                ]
 
 #----------------------------------------------------------------------------
 
-class TestLB(wx.Listbook):
+def getNextImageID(count):
+    imID = 0
+    while True:
+        yield imID
+        imID += 1
+        if imID == count:
+            imID = 0
+    
+    
+class TestTB(wx.Treebook):
     def __init__(self, parent, id, log):
-        wx.Listbook.__init__(self, parent, id, style=
-                            wx.BK_DEFAULT
-                            #wx.BK_TOP
-                            #wx.BK_BOTTOM
-                            #wx.BK_LEFT
-                            #wx.BK_RIGHT
+        wx.Treebook.__init__(self, parent, id, style=
+                             wx.BK_DEFAULT
+                             #wx.BK_TOP
+                             #wx.BK_BOTTOM
+                             #wx.BK_LEFT
+                             #wx.BK_RIGHT
                             )
         self.log = log
 
@@ -29,24 +38,27 @@ class TestLB(wx.Listbook):
             bmp = f()
             il.Add(bmp)
         self.AssignImageList(il)
-
+        imageIdGenerator = getNextImageID(il.GetImageCount())
+        
         # Now make a bunch of panels for the list book
         first = True
-        imID = 0
         for colour in colourList:
             win = self.makeColorPanel(colour)
-            self.AddPage(win, colour, imageId=imID)
-            imID += 1
-            if imID == il.GetImageCount(): imID = 0
+            self.AddPage(win, colour, imageId=imageIdGenerator.next())
             if first:
                 st = wx.StaticText(win.win, -1,
                           "You can put nearly any type of window here,\n"
-                          "and the list can be on any side of the Listbook",
+                          "and the wx.TreeCtrl can be on either side of the\n"
+                          "Treebook",
                           wx.Point(10, 10))
                 first = False
 
-        self.Bind(wx.EVT_LISTBOOK_PAGE_CHANGED, self.OnPageChanged)
-        self.Bind(wx.EVT_LISTBOOK_PAGE_CHANGING, self.OnPageChanging)
+            win = self.makeColorPanel(colour)
+            st = wx.StaticText(win.win, -1, "this is a sub-page", (10,10))
+            self.AddSubPage(win, 'a sub-page', imageId=imageIdGenerator.next())
+
+        self.Bind(wx.EVT_TREEBOOK_PAGE_CHANGED, self.OnPageChanged)
+        self.Bind(wx.EVT_TREEBOOK_PAGE_CHANGING, self.OnPageChanging)
 
 
     def makeColorPanel(self, color):
@@ -76,7 +88,7 @@ class TestLB(wx.Listbook):
 #----------------------------------------------------------------------------
 
 def runTest(frame, nb, log):
-    testWin = TestLB(nb, -1, log)
+    testWin = TestTB(nb, -1, log)
     return testWin
 
 #----------------------------------------------------------------------------
@@ -84,10 +96,10 @@ def runTest(frame, nb, log):
 
 overview = """\
 <html><body>
-<h2>wx.Listbook</h2>
+<h2>wx.Treebook</h2>
 <p>
 This class is a control similar to a notebook control, but with a
-wx.ListCtrl instead of a set of tabs.
+wx.TreeCtrl instead of a set of tabs.
 
 """
 
